# nucleo-l432

./: .travis.yml  Cargo.toml  README.md  memory.x  openocd.gdb
.builds/: beta.yml  lint.yml  nightly.yml  stable.yml
blink/: Cargo.toml
blink/src/: main.rs
hello/: Cargo.toml
hello/src/: main.rs
