[package]
name = "blink"
version = "0.1.0"
description = "Blink LD3."
authors = ["Jan Baudisch <dev@baudisch.xyz>"]
license = "GPL-3.0"
readme = "../README.md"
edition = "2018"
workspace = ".."

[dependencies]
cortex-m = "0.6"
cortex-m-rt = "0.6"
panic-halt = "0.2"
stm32l4xx-hal = { version = "0.4.0", features = ["stm32l4x2"] }
