[package]
name = "hello"
version = "0.1.0"
description = "Hello world via semihosting."
authors = ["Jan Baudisch <dev@baudisch.xyz>"]
license = "GPL-3.0"
readme = "../README.md"
edition = "2018"
workspace = ".."

[dependencies]
cortex-m-rt = "0.6"
cortex-m-semihosting = "0.3"
panic-halt = "0.2"

[[bin]]
name = "hello"
test = false
bench = false
